# server/daily-tasks/src/main/java/com/azatdev/dailytasks/data/repositories/data/MapTaskDataToDomain.java
@@ -3,10 +3,8 @@ package com.azatdev.dailytasks.data.repositories.data;
 import com.azatdev.dailytasks.data.repositories.persistence.entities.TaskData;
 import com.azatdev.dailytasks.domain.models.Task;
 
-import io.micrometer.common.lang.NonNull;
-
 @FunctionalInterface
 public interface MapTaskDataToDomain {
 
-    @NonNull public Task execute(@NonNull TaskData taskData);
+    Task execute(TaskData taskData);
 }
